# console-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
aoi-admin/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  deploy.sh  go.mod  go.sum
aoi-admin/configs/: config.example.yaml
aoi-admin/deploy/: config.production.example.yaml  docker-compose.production.example.yml
aoi-admin/docs/: README.md
aoi-admin/internal/: import_boundary_test.go
aoi-admin/script/: install.sh
aoi-admin/scripts/: package.ps1  package.py  package.sh
configs/: console.example.yaml  console.production.example.yaml  console.secrets.example.yaml
crates/core/app/: Cargo.toml
crates/core/app/src/: app.rs  error.rs  lib.rs  main.rs  observability.rs
crates/core/app/src/domain/: iam.rs  mod.rs  notification.rs  setup.rs  system.rs
crates/core/app/src/handler/http/: error.rs  iam.rs  mod.rs  probe.rs  setup.rs  system.rs
crates/core/app/src/infrastructure/: database.rs  external_iam_repository.rs  external_notification_repository.rs  external_setup_repository.rs  external_system_repository.rs  media_storage.rs  mod.rs  notification.rs  sql_templates.rs  sqlite_repository.rs  system_metrics.rs  traffic_probe.rs
crates/core/app/src/repository/: mod.rs
crates/core/app/src/scheduler/: mod.rs
crates/core/app/src/service/: crypto_error.rs  iam.rs  mod.rs  notification.rs  setup.rs  system.rs
crates/core/app/src/transport/http/: csrf.rs  mod.rs  operation_record.rs  request_context.rs  route_registry.rs  router.rs
crates/core/app/tests/: http_smoke.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: lib.rs
crates/tools/crypto/: Cargo.toml
crates/tools/crypto/src/: lib.rs
docs/ai/: collaboration.md  (+2 more)
migrations/: 20260621000100_init_core.sql  20260621000200_add_refresh_session_tokens.sql  20260621000300_add_iam_notification_outbox.sql  20260621000400_add_invitation_acceptance.sql  20260621000500_add_notification_delivery_secrets.sql  20260621000600_add_mfa_recovery_codes.sql  20260621000700_add_notification_retry_attempts.sql  20260621000800_add_traffic_probe_alerts.sql  20260621000900_add_version_release_lifecycle.sql  README.md
scripts/: aoi-admin-source-audit.ps1  architecture-boundary-scan.ps1  database-deploy-preflight.ps1  database-external-smoke.ps1  database-runtime-smoke.ps1  database-schema-dialect-scan.ps1  deployment-smoke.ps1  goal-completion-audit.ps1  goal-deliverable-audit.ps1  governance-scan.ps1  repository-dialect-audit.ps1  runtime-config-boundary-scan.ps1  security-sensitive-scan.ps1  stage-acceptance-report-audit.ps1  target-acceptance-report-validator-smoke.ps1  target-environment-acceptance.ps1  trailing-whitespace-scan.ps1  validate-target-acceptance-report.ps1  webui-capability-boundary-scan.ps1
(+627 files in other folders)
