[workspace]
members = [
    "crates/core/app",
    "crates/core/config",
    "crates/core/types",
    "crates/tools/crypto",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rin721/console-rs"
rust-version = "1.91"

[workspace.lints.rust]
unsafe_code = "forbid"
