[package]
name = "crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
data-encoding = "2.9"
hex = "0.4"
hmac = "0.12"
percent-encoding = "2.3"
rand_core = { version = "0.6", features = ["getrandom"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4"] }

[lints]
workspace = true
